--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,31 @@
-.App {
-    text-align: center;
+.navItem__ {
+    list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+.container__ {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
 }
 
-.App-link {
-    color: #61dafb;
+.custList__ {
+    list-style: none;
+}
+
+.custArea__ {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: stretch;
+    height: 100%;
+}
+
+.cardContainer__ {
+    width: 30vw;
+}
+
+.navPos__ {
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
 }
