--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body {
+    background-color: #f9f8fa;
+}
+
+.app__ {
+    margin-top: 3rem;
+}
 .navItem__ {
     list-style: none;
 }
@@ -13,19 +20,60 @@
 
 .custArea__ {
     display: flex;
-    flex-wrap: wrap;
-    align-content: stretch;
-    height: 100%;
+    flex-direction: column;
+    margin-left: 3rem;
 }
 
-.cardContainer__ {
+.contactCard__ {
     width: 30vw;
+    box-shadow: 0px 0px 5px 5px #ebe9e9;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .navPos__ {
-    position: fixed;
-    bottom: 0;
-    width: 100vw;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    position: fixed;
+    left: -50px;
+    top: 5rem;
+    z-index: 1;
+    width: 10vw;
+    background-color: #f9f8fa;
+    width: 20vw;
+}
+
+.navButton {
+    padding: 0.5rem;
+    width: 100%;
+    background-color: #f9f8fa;
+    border-top: 0.5px solid #e0dae5;
+    border-bottom: 0.5px solid #e0dae5;
+    border-right: none;
+    border-left: none;
+    margin-top: 0.05rem;
+    transition: background-color 0.4s, color 0.6s;
+}
+
+.navButton:hover {
+    background-color: #4b2487;
+    color: #f9f8fa;
+}
+
+.remitCard__ {
+    list-style: none;
+    width: 30vw;
+    box-shadow: 0px 0px 5px 5px #ebe9e9;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.payee__ {
+    width: 30vw;
+}
+
+.remit__ {
+    width: 30vw;
+    margin-left: 2rem;
 }
