--- a/src/App.css
+++ b/src/App.css
@@ -1,79 +1,351 @@
-body {
-    background-color: #f9f8fa;
-}
-
-.app__ {
-    margin-top: 3rem;
-}
-.navItem__ {
-    list-style: none;
-}
-
-.container__ {
-    display: flex;
-    justify-content: center;
-}
-
-.custList__ {
-    list-style: none;
-}
-
-.custArea__ {
-    display: flex;
-    flex-direction: column;
-    margin-left: 3rem;
-}
-
-.contactCard__ {
-    width: 30vw;
-    box-shadow: 0px 0px 5px 5px #ebe9e9;
-    border-radius: 5px;
-    padding: 10px;
-}
-
-.navPos__ {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    position: fixed;
-    left: -50px;
-    top: 5rem;
-    z-index: 1;
-    width: 10vw;
-    background-color: #f9f8fa;
-    width: 20vw;
-}
-
-.navButton {
-    padding: 0.5rem;
-    width: 100%;
-    background-color: #f9f8fa;
-    border-top: 0.5px solid #e0dae5;
-    border-bottom: 0.5px solid #e0dae5;
-    border-right: none;
-    border-left: none;
-    margin-top: 0.05rem;
-    transition: background-color 0.4s, color 0.6s;
-}
-
-.navButton:hover {
-    background-color: #4b2487;
-    color: #f9f8fa;
-}
-
-.remitCard__ {
-    list-style: none;
-    width: 30vw;
-    box-shadow: 0px 0px 5px 5px #ebe9e9;
-    border-radius: 5px;
-    padding: 10px;
-}
-
-.payee__ {
-    width: 30vw;
+.contactCard__ p {
+    margin-bottom: 0;
 }
 
 .remit__ {
-    width: 30vw;
-    margin-left: 2rem;
+    list-style: none;
+}
+
+.shadowBox__ {
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 5px #ebe9e9;
+    padding: 2rem;
+    margin-bottom: 4rem;
+}
+
+.nav__ {
+    list-style: none;
+    position: fixed;
+    top: 8rem;
+    left: 1rem;
+}
+
+.custContainer__ {
+    margin-top: 8rem;
+}
+
+.header__ {
+    position: relative;
+    top: 0;
+    position: fixed;
+    width: 100vw;
+    background-color: #fbffff;
+    z-index: 5;
+}
+
+.clicker__ {
+    border-bottom: 1px solid #cfcfcf;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.clicker__:hover {
+    cursor: pointer;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+.column,
+.columns {
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
+}
+
+/* For devices larger than 400px */
+@media (min-width: 400px) {
+    .container {
+        width: 85%;
+        padding: 0;
+    }
+}
+
+/* For devices larger than 550px */
+@media (min-width: 550px) {
+    .container {
+        width: 80%;
+    }
+    .column,
+    .columns {
+        margin-left: 4%;
+    }
+    .column:first-child,
+    .columns:first-child {
+        margin-left: 0;
+    }
+
+    .one.column,
+    .one.columns {
+        width: 4.66666666667%;
+    }
+    .two.columns {
+        width: 13.3333333333%;
+    }
+    .three.columns {
+        width: 22%;
+    }
+    .four.columns {
+        width: 30.6666666667%;
+    }
+    .five.columns {
+        width: 39.3333333333%;
+    }
+    .six.columns {
+        width: 48%;
+    }
+    .seven.columns {
+        width: 56.6666666667%;
+    }
+    .eight.columns {
+        width: 65.3333333333%;
+    }
+    .nine.columns {
+        width: 74%;
+    }
+    .ten.columns {
+        width: 82.6666666667%;
+    }
+    .eleven.columns {
+        width: 91.3333333333%;
+    }
+    .twelve.columns {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .one-third.column {
+        width: 30.6666666667%;
+    }
+    .two-thirds.column {
+        width: 65.3333333333%;
+    }
+
+    .one-half.column {
+        width: 48%;
+    }
+}
+
+/* Base Styles
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* NOTE
+  html is set to 62.5% so that all the REM measurements throughout Skeleton
+  are based on 10px sizing. So basically 1.5rem = 15px :) */
+html {
+    font-size: 62.5%;
+}
+body {
+    font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+    line-height: 1.6;
+    font-weight: 400;
+    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
+        sans-serif;
+    color: rgb(95, 95, 95);
+}
+
+/* Typography
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
+    margin-bottom: 2rem;
+    font-weight: 300;
+}
+h1 {
+    font-size: 4rem;
+    line-height: 1.2;
+    letter-spacing: -0.1rem;
+}
+h2 {
+    font-size: 3.6rem;
+    line-height: 1.25;
+    letter-spacing: -0.1rem;
+}
+h3 {
+    font-size: 3rem;
+    line-height: 1.3;
+    letter-spacing: -0.1rem;
+}
+h4 {
+    font-size: 2.4rem;
+    line-height: 1.35;
+    letter-spacing: -0.08rem;
+}
+h5 {
+    font-size: 1.8rem;
+    line-height: 1.5;
+    letter-spacing: -0.05rem;
+}
+h6 {
+    font-size: 1.5rem;
+    line-height: 1.6;
+    letter-spacing: 0;
+}
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+    h1 {
+        font-size: 5rem;
+    }
+    h2 {
+        font-size: 4.2rem;
+    }
+    h3 {
+        font-size: 3.6rem;
+    }
+    h4 {
+        font-size: 3rem;
+    }
+    h5 {
+        font-size: 2.4rem;
+    }
+    h6 {
+        font-size: 1.5rem;
+    }
+}
+
+p {
+    margin-top: 0;
+}
+
+/* Links
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+a {
+    color: #1eaedb;
+}
+a:hover {
+    color: #0fa0ce;
+}
+
+/* Buttons
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+    display: inline-block;
+    height: 38px;
+    padding: 0 30px;
+    color: #555;
+    text-align: center;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 38px;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid #bbb;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+.button:hover,
+button:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:focus,
+button:focus,
+input[type="submit"]:focus,
+input[type="reset"]:focus,
+input[type="button"]:focus {
+    color: #333;
+    border-color: #888;
+    outline: 0;
+}
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
+input[type="button"].button-primary {
+    color: #fff;
+    background-color: #33c3f0;
+    border-color: #33c3f0;
+}
+.button.button-primary:hover,
+button.button-primary:hover,
+input[type="submit"].button-primary:hover,
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
+.button.button-primary:focus,
+button.button-primary:focus,
+input[type="submit"].button-primary:focus,
+input[type="reset"].button-primary:focus,
+input[type="button"].button-primary:focus {
+    color: #fff;
+    background-color: #1eaedb;
+    border-color: #1eaedb;
+}
+
+–––––––––––––––––––––––––––––––––––––––––––––––––– */ ul {
+    list-style: circle inside;
+}
+ol {
+    list-style: decimal inside;
+}
+ol,
+ul {
+    padding-left: 0;
+    margin-top: 0;
+}
+ul ul,
+ul ol,
+ol ol,
+ol ul {
+    margin: 1.5rem 0 1.5rem 3rem;
+    font-size: 90%;
+}
+li {
+    margin-bottom: 1rem;
+}
+
+/* Spacing
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+button,
+.button {
+    margin-bottom: 1rem;
+}
+input,
+textarea,
+select,
+fieldset {
+    margin-bottom: 1.5rem;
+}
+pre,
+blockquote,
+dl,
+figure,
+table,
+p,
+ul,
+ol,
+form {
+    margin-bottom: 2.5rem;
+}
+
+/* Clearing
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Self Clearing Goodness */
+.container:after,
+.row:after,
+.u-cf {
+    content: "";
+    display: table;
+    clear: both;
 }
