--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 }
 
 .custContainer__ {
-    margin-top: 8rem;
+    margin-top: 2rem;
 }
 
 .header__ {
@@ -44,6 +44,12 @@
 
 .clicker__:hover {
     cursor: pointer;
+}
+
+.filter__ {
+    margin-top: 8rem;
+    margin-left: 1rem;
+    width: 80vw;
 }
 
 .container {
@@ -292,7 +298,7 @@ input[type="button"].button-primary:focus {
     border-color: #1eaedb;
 }
 
-–––––––––––––––––––––––––––––––––––––––––––––––––– */ ul {
+ul {
     list-style: circle inside;
 }
 ol {
@@ -336,6 +342,75 @@ ul,
 ol,
 form {
     margin-bottom: 2.5rem;
+}
+
+/* Forms
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea,
+select {
+    height: 38px;
+    padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
+    background-color: #fff;
+    border: 1px solid #d1d1d1;
+    border-radius: 4px;
+    box-shadow: none;
+    box-sizing: border-box;
+}
+/* Removes awkward default styles on some inputs for iOS */
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+textarea {
+    min-height: 65px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+input[type="email"]:focus,
+input[type="number"]:focus,
+input[type="search"]:focus,
+input[type="text"]:focus,
+input[type="tel"]:focus,
+input[type="url"]:focus,
+input[type="password"]:focus,
+textarea:focus,
+select:focus {
+    border: 1px solid #33c3f0;
+    outline: 0;
+}
+label,
+legend {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+}
+fieldset {
+    padding: 0;
+    border-width: 0;
+}
+input[type="checkbox"],
+input[type="radio"] {
+    display: inline;
+}
+label > .label-body {
+    display: inline-block;
+    margin-left: 0.5rem;
+    font-weight: normal;
 }
 
 /* Clearing
