--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,10 @@
     padding: 0 20px;
     box-sizing: border-box;
 }
+
+.logo__img__ {
+    max-height: 6rem;
+}
 .column,
 .columns {
     width: 100%;
@@ -152,8 +156,7 @@ body {
     font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
     line-height: 1.6;
     font-weight: 400;
-    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
-        sans-serif;
+    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(95, 95, 95);
 }
 
